samples/_failures_safe/1761393450_9cdb2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_281208c3.c: In function ‘main’:
./samples/SAFE/__tmp_281208c3.c:146:47: error: expected ‘)’ at end of input
  146 |     if (decompressed_size == 0 || decompressed
      |        ~                                      ^
      |                                               )
./samples/SAFE/__tmp_281208c3.c:146:5: error: expected declaration or statement at end of input
  146 |     if (decompressed_size == 0 || decompressed
      |     ^~
